...
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.4" />

                <TextView
                    android:id="@+id/title"
                    style="@style/TextPrimary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:maxLines="2"
                    android:textSize="22sp"
...
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="@id/song_art"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/song_art">

                    <ImageView
                        android:id="@+id/spotify"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@drawable/ic_spotify_bg"
                        android:padding="10dp"
                        android:src="@drawable/spotify_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.25" />

                    <ImageView
                        android:id="@+id/youtube"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/ic_youtube_bg"
                        android:padding="10dp"
                        android:src="@drawable/yt_icon_mono_dark"
...
                    android:text="@string/about"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.k2.musicdb.views.DescriptionView
                    android:id="@+id/description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/about_title"
...
                    android:id="@+id/released_on_prefix"
                    style="@style/TextSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/released_on"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/description" />

                <TextView
                    android:id="@+id/released_on"
                    style="@style/TextSecondary"
...
                    app:layout_constraintStart_toEndOf="@id/released_on_prefix"
                    app:layout_constraintTop_toTopOf="@id/released_on_prefix" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/album_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/about_container">
...
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/album_container_title"
                    app:layout_constraintWidth_percent="0.4" />

                <TextView
                    android:id="@+id/album_title"
                    style="@style/TextPrimary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:maxLines="2"
...
                    android:text="@string/artists"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/artist_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
...
