<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".song.SongFragment">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/error_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <TextView
            android:id="@+id/error_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/error_placeholder"
            android:textColor="@color/colorAccentLight"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/guide_half"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <FrameLayout
            android:id="@+id/retry_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search_box_bg"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_half"
            app:layout_constraintWidth_percent="0.5">

            <Button
                android:id="@+id/error_retry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:text="@string/retry" />

        </FrameLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_half"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/artist_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/meta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/artist_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/search_box_bg"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_person"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.6" />

                <TextView
                    android:id="@+id/title"
                    style="@style/TextPrimary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textSize="26sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/artist_image" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/aka_chips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:gravity="center"
                        android:text="@string/also_known_as" />

                </com.google.android.material.chip.ChipGroup>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/social_links"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="22dp"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/aka_chips">

                    <ImageView
                        android:id="@+id/instagram"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@drawable/ic_insta_bg"
                        android:padding="10dp"
                        android:src="@drawable/instagram_logo"
                        android:tint="@android:color/white"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toStartOf="@id/twitter"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.18" />

                    <ImageView
                        android:id="@+id/twitter"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@drawable/ic_twitter_bg"
                        android:padding="10dp"
                        android:src="@drawable/twitter_logo"
                        android:tint="@android:color/white"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="@id/facebook"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toEndOf="@id/instagram"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.18" />

                    <ImageView
                        android:id="@+id/facebook"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@drawable/ic_fb_bg"
                        android:padding="10dp"
                        android:src="@drawable/facebook_logo"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toEndOf="@id/twitter"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.18" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.k2.musicdb.views.DescriptionView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/meta"
                app:moreHandleGravity="center" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>