<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_constraint_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".search.SearchFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/sail_regular"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:visibility="visible"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/guide_search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <FrameLayout
        android:id="@+id/search_box_frame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide_search"
        app:layout_constraintWidth_percent="0.85">

        <EditText
            android:id="@+id/search_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_box_bg"
            android:gravity="center"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:paddingLeft="48dp"
            android:paddingTop="12dp"
            android:paddingRight="48dp"
            android:paddingBottom="12dp"
            android:singleLine="true"
            android:textColorHint="@color/colorAccent" />

        <ImageView
            android:id="@+id/search_box_clear"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="14dp"
            android:src="@drawable/ic_clear"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/search_box_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:padding="14dp"
            android:src="@drawable/ic_search"
            android:visibility="invisible" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:paddingBottom="12dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/search_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide_search" />

    <TextView
        android:id="@+id/error_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/error_placeholder"
        android:textColor="@color/colorAccentLight"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/guide_search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <FrameLayout
        android:id="@+id/retry_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/search_box_bg"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide_search"
        app:layout_constraintWidth_percent="0.5">

        <Button
            android:id="@+id/error_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:text="@string/retry" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>